determineTransitionZoneSentences() implemented